--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
+    "sonner": "^2.0.5",
     "zod": "^3.25.67"
   },
   "devDependencies": {
